Added boilerplate code for forward_list and list containers

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -13,19 +13,24 @@ option(TEST_ALL "toggle option to execute all unit tests from all test suites" O
 option(TEST_ARRAY "toggle option to execute array container test cases" OFF)
 option(TEST_DARRAY "toggle option to execute darray container test cases" OFF)
 option(TEST_DEQUE "toggle option to execute deque container test cases" OFF)
+option(TEST_FORWARD_LIST "toggle option to execute deque container test cases" OFF)
+option(TEST_LIST "toggle option to execute deque container test cases" OFF)
 
 
 if(TEST_ALL)
   add_subdirectory(container/array.test)
   add_subdirectory(container/darray.test)
   add_subdirectory(container/deque.test)
+  add_subdirectory(container/forward_list.test)
+  add_subdirectory(container/list.test)
 elseif(TEST_ARRAY)
   add_subdirectory(container/array.test)
 elseif(TEST_DARRAY)
   add_subdirectory(container/darray.test)
 elseif(TEST_DEQUE)
   add_subdirectory(container/deque.test)
+elseif(TEST_FORWARD_LIST)
+  add_subdirectory(container/forward_list.test)
+elseif(TEST_LIST)
+  add_subdirectory(container/list.test)
 endif()
-
-
-verbose_message("Finished adding unit tests for ${CMAKE_PROJECT_NAME}.")
