--- a/.github/workflows/build_docs.yaml
+++ b/.github/workflows/build_docs.yaml
@@ -48,14 +48,14 @@ jobs:
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
           pip install sphinx sphinx-rtd-theme breathe myst_parser breathe sphinx_design pydata-sphinx-theme
       
-      - name: Cache documentation
-        uses: actions/cache@v3
-        with:
-          path: ${{ github.workspace }}/docs
-          key: build-docs-${{ hashFiles('docs/**/*') }}
-          restore-keys: |
-            build-docs-
-
+      #- name: Cache documentation
+      #  uses: actions/cache@v3
+      #  with:
+      #    path: ${{ github.workspace }}/docs
+      #    key: build-docs-${{ hashFiles('docs/**/*') }}
+      #    restore-keys: |
+      #      build-docs-
+#
       - name: Build documentation
         id: build-docs
         run: | 
