--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -422,11 +422,11 @@ message(STATUS "Finished building requirements for installing the package.\n")
 # Unit testing setup
 #
 
-if(${PROJECT_NAME}_ENABLE_UNIT_TESTING)
-  enable_testing()
-  message(STATUS "Build unit tests for the project. Tests should always be found in the test folder\n")
-  add_subdirectory(test)
-endif()
+#if(${PROJECT_NAME}_ENABLE_UNIT_TESTING)
+#  enable_testing()
+#  message(STATUS "Build unit tests for the project. Tests should always be found in the test folder\n")
+#  add_subdirectory(test)
+#endif()
 
 ##################################################################################
 ##################################################################################
