Updated static analysis workflow

--- a/.github/workflows/static_analysis.yaml
+++ b/.github/workflows/static_analysis.yaml
@@ -19,13 +19,9 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN}}
           check_library:
           skip_preprocessor:
-          enable:
+          enable: all
           exclude_check: |
-            test
-            build
-            examples
-            libs
-            scripts
+            build examples libs scripts
           inconclusive:
           inline_suppression:
           force_language: c++
