--- a/.github/workflows/static_analysis.yaml
+++ b/.github/workflows/static_analysis.yaml
@@ -17,10 +17,7 @@ jobs:
         uses: deep5050/cppcheck-action@main
         with:
           github_token: ${{ secrets.GITHUB_TOKEN}}
-          enable: all
-          exclude_check: build examples libs scripts
-          max_ctu_depth: 2
-          std: c++20
+          exclude_check: ./build ./examples ./libs ./scripts
           output_file: ./static_analysis.report.txt
 
       - name: publish report    
