--- a/.github/workflows/cmake_build.yaml
+++ b/.github/workflows/cmake_build.yaml
@@ -34,6 +34,7 @@ jobs:
             - 'CMakeLists.txt'
             - 'Doxyfile'
             - '.gitignore'
+  
   build:
     name: ${{ matrix.config.name }}
     runs-on: ${{ matrix.config.os }}
@@ -122,7 +123,7 @@ jobs:
         string(TIMESTAMP current_date "%Y-%m-%d-%H;%M;%S" UTC)
         file(APPEND "$ENV{GITHUB_OUTPUT}" "timestamp=${current_date}")
     
-    - name: ccache cache files
+    - name: Restore cache
       uses: actions/cache@v3
       with:
         path: .ccache
@@ -216,6 +217,81 @@ jobs:
         set(ENV{CCACHE_DIR} "${ccache_basedir}/.ccache")
         execute_process(COMMAND ccache -s)
     
+    #- name: Run tests
+    #  shell: cmake -P {0}
+    #  run: |
+    #    include(ProcessorCount)
+    #    ProcessorCount(N)
+    #    set(ENV{CTEST_OUTPUT_ON_FAILURE} "ON")
+    #    execute_process(
+    #      COMMAND ctest -j ${N}
+    #      WORKING_DIRECTORY build
+    #      RESULT_VARIABLE result
+    #      OUTPUT_VARIABLE output
+    #      ERROR_VARIABLE output
+    #      ECHO_OUTPUT_VARIABLE ECHO_ERROR_VARIABLE
+    #    )
+    #    if (NOT result EQUAL 0)
+    #      string(REGEX MATCH "[0-9]+% tests.*[0-9.]+ sec.*$" test_results "${output}")
+    #      string(REPLACE "\n" "%0A" test_results "${test_results}")
+    #      message("::error::${test_results}")
+    #      message(FATAL_ERROR "Running tests failed!")
+    #    endif()
+    
+    - name: Install Strip
+      run: cmake --install build --config "Release" --prefix instdir --strip --verbose
+
+    - name: Pack
+      working-directory: instdir
+      run: cmake -E tar cfv ../${{ matrix.config.artifact }} --format=7zip .
+
+    - name: Upload
+      uses: actions/upload-artifact@v3
+      with:
+        path: ./${{ matrix.config.artifact }} 
+        name: ${{ matrix.config.artifact }}
+
+  test:
+    name: ${{ matrix.config.name }}
+    runs-on: ${{ matrix.config.os }}
+    needs: build
+    strategy:
+      fail-fast: false
+      matrix:
+        config:
+        - {
+            name: "Windows Latest MSVC", artifact: "Windows-MSVC.7z",
+            os: windows-latest,
+            cc: "cl", cxx: "cl",
+            environment_script: "C:/Program Files/Microsoft Visual Studio/2022/Enterprise/VC/Auxiliary/Build/vcvars64.bat"
+          }
+        # Test Build fails with MinGW
+        # - {
+        #     name: "Windows Latest MinGW", artifact: "Windows-MinGW.7z",
+        #     os: windows-latest,
+        #     cc: "gcc", cxx: "g++"
+        #   }
+        - {
+            name: "Ubuntu Latest GCC", artifact: "Linux.7z",
+            os: ubuntu-latest,
+            cc: "gcc", cxx: "g++"
+          }
+        - {
+            name: "macOS Latest Clang", artifact: "macOS.7z",
+            os: macos-latest,
+            cc: "clang", cxx: "clang++"
+          }
+    steps:
+    - uses: actions/checkout@v3
+    
+    - name: Restore cache
+      uses: actions/cache@v3
+      with:
+        path: .ccache
+        key: ${{ matrix.config.name }}-ccache-${{ steps.ccache_cache_timestamp.outputs.timestamp }}
+        restore-keys: |
+          ${{ matrix.config.name }}-ccache-
+
     - name: Run tests
       shell: cmake -P {0}
       run: |
@@ -236,20 +312,6 @@ jobs:
           message("::error::${test_results}")
           message(FATAL_ERROR "Running tests failed!")
         endif()
-    
-    - name: Install Strip
-      run: cmake --install build --config "Release" --prefix instdir --strip --verbose
-
-    - name: Pack
-      working-directory: instdir
-      run: cmake -E tar cfv ../${{ matrix.config.artifact }} --format=7zip .
-
-
-    - name: Upload
-      uses: actions/upload-artifact@v3
-      with:
-        path: ./${{ matrix.config.artifact }} 
-        name: ${{ matrix.config.artifact }}
 
   release:
     if: contains(github.ref, 'tags/v')
