--- a/.github/workflows/cmake_build.yaml
+++ b/.github/workflows/cmake_build.yaml
@@ -295,6 +295,7 @@ jobs:
     - name: Run tests
       shell: cmake -P {0}
       run: |
+        execute_process(COMMAND ls)
         include(ProcessorCount)
         ProcessorCount(N)
         set(ENV{CTEST_OUTPUT_ON_FAILURE} "ON")
