--- a/.github/workflows/cmake_build.yaml
+++ b/.github/workflows/cmake_build.yaml
@@ -321,11 +321,25 @@ jobs:
           message(FATAL_ERROR "Running tests failed!")
         endif()
 
-    - name: Delete cached build
-      run: |
-        echo "Deleting the build/ cache"
-        curl -X DELETE -H "Accept: application/vnd.github.v3+json" -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" https://api.github.com/repos/zaki-x86/zxx_core_container/actions/caches?key=${{${{ matrix.config.name }}-build}}
-
+    - name: Clear cache
+      uses: actions/github-script@v6
+      with:
+        script: |
+          console.log("About to clear")
+          const caches = await github.rest.actions.getActionsCacheList({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+          })
+          for (const cache of caches.data.actions_caches) {
+            console.log(cache)
+            if(cache.key.includes("-build"))
+            github.rest.actions.deleteActionsCacheById({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              cache_id: cache.id,
+            })
+          }
+          console.log("Clear completed")
 
   release:
     if: contains(github.ref, 'tags/v')
