--- a/.github/workflows/cmake_build.yaml
+++ b/.github/workflows/cmake_build.yaml
@@ -328,6 +328,7 @@ jobs:
   
   remove-build:
     needs: test
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/github-script@v6
       with:
