Edited static_analysis script

--- a/.github/workflows/static_analysis.yaml
+++ b/.github/workflows/static_analysis.yaml
@@ -17,7 +17,7 @@ jobs:
         uses: deep5050/cppcheck-action@main
         with:
           github_token: ${{ secrets.GITHUB_TOKEN}}
-          other_options: -i ./build -i ./examples -i ./libs -i ./scripts -v
+          other_options: -i ./examples -i ./libs -i ./scripts -v
       
       - name: display report
         run:  |
