--- a/.github/workflows/cmake_build.yaml
+++ b/.github/workflows/cmake_build.yaml
@@ -16,7 +16,7 @@ jobs:
   paths-filter:
     runs-on: ubuntu-latest
     outputs:
-      output1: ${{ steps.filter.outputs.workflows }}
+      exec_build: ${{ steps.filter.outputs.workflows }}
     steps:
     - uses: actions/checkout@v2
     - uses: dorny/paths-filter@v2
@@ -65,7 +65,7 @@ jobs:
             os: macos-latest,
             cc: "clang", cxx: "clang++"
           }
-    if: needs.paths-filter.outputs.output1 == 'true'
+    if: needs.paths-filter.outputs.exec_build == 'true'
     steps:
     - uses: actions/checkout@v3
 
@@ -75,6 +75,7 @@ jobs:
         set(cmake_version $ENV{CMAKE_VERSION})
         set(ninja_version $ENV{NINJA_VERSION})
         message(STATUS "Using host CMake version: ${CMAKE_VERSION}")
+        
         if ("${{ runner.os }}" STREQUAL "Windows")
           set(ninja_suffix "win.zip")
           set(cmake_suffix "windows-x86_64.zip")
@@ -94,6 +95,7 @@ jobs:
         set(cmake_url "https://github.com/Kitware/CMake/releases/download/v${cmake_version}/cmake-${cmake_version}-${cmake_suffix}")
         file(DOWNLOAD "${cmake_url}" ./cmake.zip SHOW_PROGRESS)
         execute_process(COMMAND ${CMAKE_COMMAND} -E tar xvf ./cmake.zip)
+        
         # Add to PATH environment variable
         file(TO_CMAKE_PATH "$ENV{GITHUB_WORKSPACE}/${cmake_dir}" cmake_dir)
         set(path_separator ":")
@@ -107,6 +109,11 @@ jobs:
             COMMAND chmod +x ${cmake_dir}/cmake
           )
         endif()
+
+        # Debugging step: Show GITHUB_PATH
+        execute_process(
+          COMMAND cat $GITHUB_PATH
+        )
     
     - name: Download ccache
       id: ccache
@@ -223,28 +230,7 @@ jobs:
         file(TO_CMAKE_PATH "$ENV{GITHUB_WORKSPACE}" ccache_basedir)
         set(ENV{CCACHE_BASEDIR} "${ccache_basedir}")
         set(ENV{CCACHE_DIR} "${ccache_basedir}/.ccache")
-        execute_process(COMMAND ccache -s)
-    
-    #- name: Run tests
-    #  shell: cmake -P {0}
-    #  run: |
-    #    include(ProcessorCount)
-    #    ProcessorCount(N)
-    #    set(ENV{CTEST_OUTPUT_ON_FAILURE} "ON")
-    #    execute_process(
-    #      COMMAND ctest -j ${N}
-    #      WORKING_DIRECTORY build
-    #      RESULT_VARIABLE result
-    #      OUTPUT_VARIABLE output
-    #      ERROR_VARIABLE output
-    #      ECHO_OUTPUT_VARIABLE ECHO_ERROR_VARIABLE
-    #    )
-    #    if (NOT result EQUAL 0)
-    #      string(REGEX MATCH "[0-9]+% tests.*[0-9.]+ sec.*$" test_results "${output}")
-    #      string(REPLACE "\n" "%0A" test_results "${test_results}")
-    #      message("::error::${test_results}")
-    #      message(FATAL_ERROR "Running tests failed!")
-    #    endif()
+        execute_process(COMMAND ccache -s)   
     
     - name: Install Strip
       run: cmake --install build --config "Release" --prefix instdir --strip --verbose
