--- a/.github/workflows/cmake_build.yaml
+++ b/.github/workflows/cmake_build.yaml
@@ -112,7 +112,7 @@ jobs:
 
         # Debugging step: Show GITHUB_PATH
         execute_process(
-          COMMAND cat $GITHUB_PATH
+          COMMAND cat $ENV{GITHUB_PATH}
         )
     
     - name: Download ccache
