--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,7 +5,7 @@ cmake_minimum_required(VERSION 3.15)
 #
 
 project(
-  container_test
+  container.test
   LANGUAGES CXX
 )
 
@@ -15,6 +15,15 @@ option(TEST_DARRAY "toggle option to execute darray container test cases" OFF)
 option(TEST_DEQUE "toggle option to execute deque container test cases" OFF)
 option(TEST_FORWARD_LIST "toggle option to execute deque container test cases" OFF)
 option(TEST_LIST "toggle option to execute deque container test cases" OFF)
+option(TEST_SET "toggle option to execute set container test cases" OFF)
+option(TEST_MULTISET "toggle option to execute multiset container test cases" OFF)
+option(TEST_UNORDERED_SET "toggle option to execute unordered_set container test cases" OFF)
+option(TEST_UNORDERED_MULTISET "toggle option to execute unordered_multiset container test cases" OFF)
+option(TEST_MAP "toggle option to execute map container test cases" OFF)
+option(TEST_MULTIMAP "toggle option to execute multimap container test cases" OFF)
+option(TEST_UNORDERED_MAP "toggle option to execute unordered_map container test cases" OFF)
+option(TEST_UNORDERED_MULTIMAP "toggle option to execute unordered_multimap container test cases" OFF)
+
 
 
 if(TEST_ALL)
@@ -23,6 +32,14 @@ if(TEST_ALL)
   add_subdirectory(container/deque.test)
   add_subdirectory(container/forward_list.test)
   add_subdirectory(container/list.test)
+  add_subdirectory(container/set.test)
+  add_subdirectory(container/multiset.test)
+  add_subdirectory(container/map.test)
+  add_subdirectory(container/multimap.test)
+  add_subdirectory(container/unordered_map.test)
+  add_subdirectory(container/unordered_multimap.test)
+  add_subdirectory(container/unordered_set.test)
+  add_subdirectory(container/unordered_multiset.test)
 elseif(TEST_ARRAY)
   add_subdirectory(container/array.test)
 elseif(TEST_DARRAY)
@@ -33,4 +50,20 @@ elseif(TEST_FORWARD_LIST)
   add_subdirectory(container/forward_list.test)
 elseif(TEST_LIST)
   add_subdirectory(container/list.test)
+elseif(TEST_SET)
+  add_subdirectory(container/set.test)
+elseif(TEST_MULTISET)
+  add_subdirectory(container/multiset.test)
+elseif(TEST_UNORDERED_SET)
+  add_subdirectory(container/unordered_set.test)
+elseif(TEST_UNORDERED_MULTISET)
+  add_subdirectory(container/unordered_multiset.test)
+elseif(TEST_MAP)
+  add_subdirectory(container/map.test)
+elseif(TEST_MULTIMAP)
+  add_subdirectory(container/multimap.test)
+elseif(TEST_UNORDERED_MAP)
+  add_subdirectory(container/unordered_map.test)
+elseif(TEST_UNORDERED_MULTIMAP)
+  add_subdirectory(container/unordered_multimap.test)
 endif()
