--- a/.github/workflows/cmake_build.yaml
+++ b/.github/workflows/cmake_build.yaml
@@ -158,20 +158,34 @@ jobs:
         
         set(ENV{PATH} "$ENV{GITHUB_WORKSPACE}${path_separator}$ENV{PATH}")
         
-        execute_process(
-            COMMAND cmake
-              -S .
-              -B build
-              -D CMAKE_BUILD_TYPE=$ENV{BUILD_TYPE}
-              -G Ninja
-              -D CMAKE_MAKE_PROGRAM=ninja
-              -D CMAKE_C_COMPILER_LAUNCHER=ccache
-              -D CMAKE_CXX_COMPILER_LAUNCHER=ccache
-              -D TEST_ALL=ON
-              -DCMAKE_EXE_LINKER_FLAGS=-static
-            RESULT_VARIABLE result
-          )
-        
+        if ("${{ runner.os }}" STREQUAL "Windows" AND "x${{ matrix.config.environment_script }}" STREQUAL "x")
+            execute_process(
+                COMMAND cmake
+                  -S .
+                  -B build
+                  -D CMAKE_BUILD_TYPE=$ENV{BUILD_TYPE}
+                  -G Ninja
+                  -D CMAKE_MAKE_PROGRAM=ninja
+                  -D CMAKE_C_COMPILER_LAUNCHER=ccache
+                  -D CMAKE_CXX_COMPILER_LAUNCHER=ccache
+                  -D TEST_ALL=ON
+                  -DCMAKE_EXE_LINKER_FLAGS=-static
+                RESULT_VARIABLE result
+              )
+        else()
+            execute_process(
+                COMMAND cmake
+                  -S .
+                  -B build
+                  -D CMAKE_BUILD_TYPE=$ENV{BUILD_TYPE}
+                  -G Ninja
+                  -D CMAKE_MAKE_PROGRAM=ninja
+                  -D CMAKE_C_COMPILER_LAUNCHER=ccache
+                  -D CMAKE_CXX_COMPILER_LAUNCHER=ccache
+                  -D TEST_ALL=ON
+                RESULT_VARIABLE result
+              )
+        endif()
         if (NOT result EQUAL 0)
           message(FATAL_ERROR "Bad exit status")
         endif()
