Test all is now enabled by default

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -9,7 +9,7 @@ project(
   LANGUAGES CXX
 )
 
-option(TEST_ALL "toggle option to execute all unit tests from all test suites" OFF)
+option(TEST_ALL "toggle option to execute all unit tests from all test suites" ON)
 option(TEST_ARRAY "toggle option to execute array container test cases" OFF)
 option(TEST_DARRAY "toggle option to execute darray container test cases" OFF)
 option(TEST_DEQUE "toggle option to execute deque container test cases" OFF)
@@ -41,29 +41,42 @@ if(TEST_ALL)
   add_subdirectory(container/unordered_set.test)
   add_subdirectory(container/unordered_multiset.test)
 elseif(TEST_ARRAY)
+  set(TEST_ALL OFF)
   add_subdirectory(container/array.test)
 elseif(TEST_DARRAY)
+  set(TEST_ALL OFF)
   add_subdirectory(container/darray.test)
 elseif(TEST_DEQUE)
+  set(TEST_ALL OFF)
   add_subdirectory(container/deque.test)
 elseif(TEST_FORWARD_LIST)
+  set(TEST_ALL OFF)
   add_subdirectory(container/forward_list.test)
 elseif(TEST_LIST)
+  set(TEST_ALL OFF)
   add_subdirectory(container/list.test)
 elseif(TEST_SET)
+  set(TEST_ALL OFF)
   add_subdirectory(container/set.test)
 elseif(TEST_MULTISET)
+  set(TEST_ALL OFF)
   add_subdirectory(container/multiset.test)
 elseif(TEST_UNORDERED_SET)
+  set(TEST_ALL OFF)
   add_subdirectory(container/unordered_set.test)
 elseif(TEST_UNORDERED_MULTISET)
+  set(TEST_ALL OFF)
   add_subdirectory(container/unordered_multiset.test)
 elseif(TEST_MAP)
+  set(TEST_ALL OFF)
   add_subdirectory(container/map.test)
 elseif(TEST_MULTIMAP)
+  set(TEST_ALL OFF)
   add_subdirectory(container/multimap.test)
 elseif(TEST_UNORDERED_MAP)
+  set(TEST_ALL OFF)
   add_subdirectory(container/unordered_map.test)
 elseif(TEST_UNORDERED_MULTIMAP)
+  set(TEST_ALL OFF)
   add_subdirectory(container/unordered_multimap.test)
 endif()
